--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,63 @@
 body {
   max-width: 380px;
   margin: auto;
-  background: #ddd;
+  background: #FFFFFF;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.section-produit,
+.cta-color {
+  background-color: #57BB6B;
+}
+
+header {
+  background-image: url(../img/arriere-plan.png);
+  background-size: cover;
+  border-top: #57BB6B 5px solid;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  background-color: #FFFFFF;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #57BB6B;
+  text-align: center;
+}
+
+.title h1 {
+  padding-top: 45px;
+  padding-left: 75px;
+  padding-right: 75px;
+  padding-bottom: 10px;
+}
+.title p {
+  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-left: 75px;
+  padding-right: 75px;
+  font-family: 'Quattrocento';
+  font-size: 19px;
+}
+
+.title h1, p {
+  margin: 0;
+}
+
+.cta-color {
+  color: #FFFFFF;
+  font-family: 'Maven Pro', sans-serif;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 15px;
 }
