--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,7 @@ img {
   max-width: 100%;
 }
 
-.section-produit,
-.cta-color {
-  background-color: #57BB6B;
-}
+
 
 header {
   background-image: url(../img/arriere-plan.png);
@@ -24,7 +21,7 @@ header {
 }
 
 .title {
-  background-color: #FFFFFF;
+  background-color: #ffffffe8;
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 30px;
@@ -48,16 +45,53 @@ header {
   font-size: 19px;
 }
 
-.title h1, p {
+h2, .title h1, p {
   margin: 0;
 }
 
+.cta-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cta-color {
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: 'Maven Pro', sans-serif;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
   border-radius: 15px;
+  background-color: #57BB6B;
+}
+
+.cta-light {
+  color: #57BB6B;
+  background-color: #FFFFFF;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  margin-bottom: 45px;
+  font-family: 'Maven Pro', sans-serif;
+}
+
+.section-intro {
+  text-align: center;
+  color: black;
+}
+
+.section-intro h2 {
+  font-family: 'Maven Pro', sans-serif;
+  margin-top: 90px;
+}
+
+
+.section-intro p {
+  font-family: 'Quattrocento';
+  margin-left: 70px;
+  margin-right: 70px;
+  margin-top: 20px;
 }
