--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,53 @@ h2, .title h1, p {
 .fruit-container img {
   width: 30px;
 }
+
+.section-produit {
+  background-color: #57BB6B;
+}
+
+.section-produit h2 {
+  text-align: center;
+  color: #FFFFFF;
+  font-family: 'Maven Pro', sans-serif;
+  padding-top: 30px;
+}
+
+.produits {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 15px;
+  border-radius: 15px;
+  background-color: #FFF8D7;
+}
+
+.produits h3 {
+  color: #000000;
+  padding: 40px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  font-family: 'Sriracha', cursive;
+  font-size: 30px;
+}
+
+.produits p {
+  color: #00000080;
+  font-family: 'Quattrocento';
+  padding-top: 0;
+  margin-top: 0;
+  padding-left: 40px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.produits img {
+  width: 80px;
+  padding-right: 40px;
+  padding-left: 200px;
+  padding-top: 40px;
+}
+
+.produits a {
+  padding-left: 40px;
+  padding-bottom: 30px;
+}
