--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,9 @@ img {
   max-width: 100%;
 }
 
-
+header a {
+  text-decoration: none;
+}
 
 header {
   background-image: url(../img/arriere-plan.png);
@@ -112,21 +114,28 @@ h2, .title h1, p {
 
 .section-produit {
   background-color: #57BB6B;
+  padding-bottom: 50px;
 }
 
 .section-produit h2 {
   text-align: center;
   color: #FFFFFF;
   font-family: 'Maven Pro', sans-serif;
-  padding-top: 30px;
+ padding-top: 30px;
 }
 
 .produits {
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 15px;
   border-radius: 15px;
+  box-shadow: 0px 0px 10px #00000065;
+}
+
+.produits .banane {
   background-color: #FFF8D7;
+  border-radius: 15px;
+  padding-bottom: 35px;
+
 }
 
 .produits h3 {
@@ -144,8 +153,7 @@ h2, .title h1, p {
   padding-top: 0;
   margin-top: 0;
   padding-left: 40px;
-  margin-bottom: 0;
-  padding-bottom: 0;
+  
 }
 
 .produits img {
@@ -156,6 +164,54 @@ h2, .title h1, p {
 }
 
 .produits a {
+  font-family: 'Maven Pro', sans-serif;
   padding-left: 40px;
+  text-decoration: underline;
+  font-weight: bold;
   padding-bottom: 30px;
 }
+
+.section-contact a {
+  margin-bottom: 15px;
+}
+
+.section-contact h2 {
+  text-align: center;
+  font-family: 'Maven Pro', sans-serif;
+  color: #57BB6B;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+footer p {
+  text-align: center;
+  font-family: 'Maven Pro', sans-serif;
+  color: #57BB6B;
+  margin-top: 75px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 15px;
+}
+
+.section-contact {
+  margin: 0;
+}
+
+.produits .kiwi {
+  background-color: #C4F2AD;
+  border-radius: 15px;
+  padding-bottom: 35px;
+}
+
+.produits .cafe {
+  background-color: #D3C6B2;
+  border-radius: 15px;
+  padding-bottom: 35px;
+}
+
+.produits .fraise {
+  background-color: #F7A4B4;
+  border-radius: 15px;
+  padding-bottom: 35px;
+}
+
