--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ header {
   padding-right: 75px;
   padding-bottom: 10px;
 }
+
 .title p {
   padding-bottom: 30px;
   padding-top: 10px;
@@ -89,7 +90,6 @@ h2, .title h1, p {
   font-family: 'Maven Pro', sans-serif;
   margin-top: 90px;
 }
-
 
 .section-intro p {
   font-family: 'Quattrocento';
@@ -143,7 +143,7 @@ h2, .title h1, p {
   padding: 40px;
   padding-bottom: 0;
   margin-bottom: 0;
-  font-family: 'Sriracha', cursive;
+  font-family: 'Sriracha';
   font-size: 30px;
 }
 
